--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,5 +36,5 @@ jobs:
           echo test, and deploy your project.
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
