--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,5 +39,5 @@ jobs:
           echo test, and deploy your project.
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.P_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
