--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.0.3",
+    "@semantic-release/npm": "^10.0.4",
     "semantic-release": "^21.0.7"
   },
   "keywords": [],
